SLT_Handler/Include/MMC/MMCWFP39.pas


 function set_amp_enable      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_amp_enable      ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function amp_fault_reset     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function amp_fault_set       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_amp_enable_level    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_amp_enable_level    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_amp_enable_level       ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_control     ( ax : Smallint;  iCon : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_control     ( ax : Smallint; piCon : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_electric_gear       ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_electric_gear       ( ax : Smallint; pdVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_electric_gear      ( ax : Smallint; pdVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_step_mode       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_step_mode       ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_sync_map_axes       ( max : Smallint;  sax : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function set_sync_control    ( state : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_sync_control    (pistate : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_sync_gain       ( gain : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_sync_gain      ( gain : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_sync_gain       (pigain : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_sync_gain      (pigain : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function compensation_pos    ( axLen : Smallint; arriax : pointer; arrdCdist : pointer; arriAcc : pointer)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function set_pulse_ratio     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_pulse_ratio    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_pulse_ratio     ( ax : Smallint; piRatio : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function set_stop    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_stop_rate       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_stop_rate       ( ax : Smallint; pirate : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_e_stop      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_e_stop_rate     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_e_stop_rate     ( ax : Smallint; pirate : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function set_home    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_home    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_home_level      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_home_level      ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_index_required      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_index_required      ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function io_interrupt_enable (bdnum : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function io_interrupt_on_stop  (ax : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function io_interrupt_on_e_stop (ax : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function io_interrupt_pcirq ( bdnum : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function io_interrupt_pcirq_eoi  ( bdnum : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function set_amp_fault       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_amp_fault       ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_amp_fault_level     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_amp_fault_level     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_amp_fault_level    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_amp_reset_level     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_amp_reset_level     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_amp_reset_level    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function get_analog      ( channel : Smallint; piVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_dac_output      ( channel : Smallint;  volt : Longint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_dac_output      ( channel : Smallint; plvolt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fset_stepper    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fset_servo      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fset_feedback       ( ax : Smallint;  iDev : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_closed_loop    ( ax : Smallint;  iloop : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_unipolar   ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fset_micro_stepper      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_micro_stepper      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function fset_amp_fault      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fset_control    ( ax : Smallint;  iCon : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_electric_gear      ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_step_mode      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fset_home       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_index_required     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fio_interrupt_enable (bdnum : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fio_interrupt_on_stop  (ax : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fio_interrupt_on_e_stop (ax : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fio_interrupt_pcirq   ( bdnum : Smallint;  state : Smallint) : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fset_positive_sw_limit      ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_negative_sw_limit      ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_positive_limit     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_negative_limit     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_in_position    ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_error_limit    ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fset_stop_rate      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_e_stop_rate    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fget_stepper    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_feedback       ( ax : Smallint; piDev : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_closed_loop    ( ax : Smallint; piloop : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_unipolar   ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function fget_amp_fault      ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fget_control    ( ax : Smallint; piCon : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_step_mode      ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fget_home       ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_index_required     ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fget_positive_sw_limit      ( ax : Smallint; pdPos : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_negative_sw_limit      ( ax : Smallint; pdPos : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_positive_limit     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_negative_limit     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_in_position    ( ax : Smallint; pdVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_error_limit    ( ax : Smallint; pdErrL : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fget_stop_rate      ( ax : Smallint; pirate : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_e_stop_rate    ( ax : Smallint; pirate : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function set_interpolation       ( nLen : Smallint; arriax : pointer; arrlidelt_s : pointer;  flag : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function frames_interpolation    ( nax : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
